# atlas-fx-bot

./: .gitignore  DEPLOYMENT.md  README.md  backend_runner.py  config.example.json  config.live-connectors.example.json  pyproject.toml  run-bot.ps1  sample_market_data.csv
.github/workflows/: github-pages.yml
backend/: .env.example  __init__.py  config.py  llm_adapters.py  models.py  mt5_bridge.py  risk_engine.py  server.py  state.json  trade_store.py
docs/: live-integrations.md
runtime/python/: python313._pth
src/forex_bot/: __init__.py  broker.py  config.py  data.py  engine.py  main.py  models.py  mt_cli.py  oanda_cli.py  risk.py  strategy.py
src/forex_bot/connectors/: __init__.py  base.py  metatrader.py  oanda.py
tests/: test_backend.py  test_bot.py
web/: app.js  connectors.js  index.html  styles.css
